Fixed z-index on navbar and backdrop

--- a/perselia/flaskr/static/style/style.scss
+++ b/perselia/flaskr/static/style/style.scss
@@ -106,7 +106,7 @@ $side_nav_width: 25%;
   position: fixed;
   width:100%;
   height:100vh;
-  z-index: 1;
+  z-index: 10;
   top:0;
   left:0;
   background-color:rgba(0, 0, 0, 0.5);
